Added portfolio table . Added the Header Text

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/main.css"> </head>
 
 <body>
+    <div id="developerName"> Sandeep's Porfolio</div>
     <div id="container">
         <ul id="header">
             <li><a href="">All</a></li>
@@ -17,7 +18,54 @@
             <li><a href="">Youtube</a></li>
         </ul>
         <hr>
-        <div id="content">This is the Main Portfolio</div>
+        <div id="content">
+            <table style="width:100%">
+                <tr>
+                    <td>
+                        <a href=""><img src="http://placehold.it/350x150" alt=""></a>
+                    </td>
+                    <td>
+                        <a href=""><img src="http://placehold.it/350x150" alt=""></a>
+                    </td>
+                    <td>
+                        <a href=""><img src="http://placehold.it/350x150" alt=""></a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <a href=""><img src="http://placehold.it/350x150" alt=""></a>
+                    </td>
+                    <td>
+                        <a href=""><img src="http://placehold.it/350x150" alt=""></a>
+                    </td>
+                    <td>
+                        <a href=""><img src="http://placehold.it/350x150" alt=""></a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <a href=""><img src="http://placehold.it/350x150" alt=""></a>
+                    </td>
+                    <td>
+                        <a href=""><img src="http://placehold.it/350x150" alt=""></a>
+                    </td>
+                    <td>
+                        <a href=""><img src="http://placehold.it/350x150" alt=""></a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <a href=""><img src="http://placehold.it/350x150" alt=""></a>
+                    </td>
+                    <td>
+                        <a href=""><img src="http://placehold.it/350x150" alt=""></a>
+                    </td>
+                    <td>
+                        <a href=""><img src="http://placehold.it/350x150" alt=""></a>
+                    </td>
+                </tr>
+            </table>
+        </div>
         <hr>
         <ul id="footer">
             <li>
