--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<?php
+header('Access-Control-Allow-Origin: *');
+header('Access-Control-Allow-Methods: POST, GET, OPTIONS');
+?>
 <!DOCTYPE html>
 <html lang="en">
 
