--- a/java.html
+++ b/java.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/main.css"> </head>
 
 <body>
-    <div id="developerName"> Sandeep's Porfolio</div>
+    <div id="developerName"> Sandeep's Java Porfolio</div>
     <div id="container">
         <ul id="header">
             <li><a href="index.html">All</a></li>
