Added on sample image for portfolio.png

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <table style="width:100%">
                 <tr>
                     <td>
-                        <a href=""><img src="http://placehold.it/350x150" alt=""></a>
+                        <a href=""><img src="img/portfolio.png" alt="" style="height:150px;width:350px;"></a>
                     </td>
                     <td>
                         <a href=""><img src="http://placehold.it/350x150" alt=""></a>
