Added Light Box to the Project

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Sandy's Portfolio</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.9.0/css/lightbox.min.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.9.0/js/lightbox.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css"> </head>
 
@@ -22,10 +25,10 @@
             <table style="width:100%">
                 <tr>
                     <td>
-                        <a href=""><img src="img/portfolio.png" alt="" style="height:150px;width:350px;"></a>
+                        <a href="img/portfolio.png" data-lightbox="image-1"><img src="img/portfolio.png" alt="" style="height:150px;width:350px;"></a>
                     </td>
                     <td>
-                        <a href=""><img src="http://placehold.it/350x150" alt=""></a>
+                        <a href="img/aratisankalan.png" data-lightbox="image-1"><img src="img/aratisankalan.png" alt="" style="height:150px;width:350px;"></a>
                     </td>
                     <td>
                         <a href=""><img src="http://placehold.it/350x150" alt=""></a>
