Added the screeshot and light box

--- a/index.html
+++ b/index.html
@@ -31,42 +31,75 @@
                         <a href="img/aratisankalan.png" data-lightbox="image-1"><img src="img/aratisankalan.png" alt="" style="height:150px;width:350px;"></a>
                     </td>
                     <td>
-                        <a href=""><img src="http://placehold.it/350x150" alt=""></a>
+                        <a href="img/Android-Radio.PNG" data-lightbox="image-1"><img src="img/Android-Radio.PNG" alt="" style="height:150px;width:350px;"></a>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <a href=""><img src="http://placehold.it/350x150" alt=""></a>
+                        <a href="img/FreeTTS.PNG" data-lightbox="image-1"><img src="img/FreeTTS.PNG" alt="" style="height:150px;width:350px;"></a>
                     </td>
                     <td>
-                        <a href=""><img src="http://placehold.it/350x150" alt=""></a>
+                        <a href="img/gitPageTutorial.PNG" data-lightbox="image-1"><img src="img/gitPageTutorial.PNG" alt="" style="height:150px;width:350px;"></a>
                     </td>
                     <td>
-                        <a href=""><img src="http://placehold.it/350x150" alt=""></a>
+                        <a href="img/Google-Voice-Recognition.PNG" data-lightbox="image-1"><img src="img/Google-Voice-Recognition.PNG" alt="" style="height:150px;width:350px;"></a>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <a href=""><img src="http://placehold.it/350x150" alt=""></a>
+                        <a href="img/Java-Notepad.png" data-lightbox="image-1"><img src="img/Java-Notepad.png" alt="" style="height:150px;width:350px;"></a>
                     </td>
                     <td>
-                        <a href=""><img src="http://placehold.it/350x150" alt=""></a>
+                        <a href="img/resume.PNG" data-lightbox="image-1"><img src="img/resume.PNG" alt="" style="height:150px;width:350px;"></a>
                     </td>
                     <td>
-                        <a href=""><img src="http://placehold.it/350x150" alt=""></a>
+                        <a href="img/star-rating.PNG" data-lightbox="image-1"><img src="img/star-rating.PNG" alt="" style="height:150px;width:350px;"></a>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <a href=""><img src="http://placehold.it/350x150" alt=""></a>
+                        <a href="img/texttranslator-mobile.PNG" data-lightbox="image-1"><img src="img/texttranslator-mobile.PNG" alt="" style="height:150px;width:350px;"></a>
                     </td>
                     <td>
-                        <a href=""><img src="http://placehold.it/350x150" alt=""></a>
+                        <a href="img/texttranslator.PNG" data-lightbox="image-1"><img src="img/texttranslator.PNG" alt="" style="height:150px;width:350px;"></a>
                     </td>
                     <td>
-                        <a href=""><img src="http://placehold.it/350x150" alt=""></a>
+                        <a href="img/Website-Blocker.png" data-lightbox="image-1"><img src="img/Website-Blocker.png" alt="" style="height:150px;width:350px;"></a>
                     </td>
                 </tr>
+                <!--<tr>
+    <td>
+        <a href=""><img src="http://placehold.it/350x150" alt=""></a>
+    </td>
+    <td>
+        <a href=""><img src="http://placehold.it/350x150" alt=""></a>
+    </td>
+    <td>
+        <a href=""><img src="http://placehold.it/350x150" alt=""></a>
+    </td>
+</tr>
+<tr>
+    <td>
+        <a href=""><img src="http://placehold.it/350x150" alt=""></a>
+    </td>
+    <td>
+        <a href=""><img src="http://placehold.it/350x150" alt=""></a>
+    </td>
+    <td>
+        <a href=""><img src="http://placehold.it/350x150" alt=""></a>
+    </td>
+</tr>
+<tr>
+    <td>
+        <a href=""><img src="http://placehold.it/350x150" alt=""></a>
+    </td>
+    <td>
+        <a href=""><img src="http://placehold.it/350x150" alt=""></a>
+    </td>
+    <td>
+        <a href=""><img src="http://placehold.it/350x150" alt=""></a>
+    </td>
+</tr>-->
             </table>
         </div>
         <hr>
