Removed unwanted code , Added links for social network

--- a/index.html
+++ b/index.html
@@ -67,54 +67,21 @@
                         <a href="img/Website-Blocker.png" data-lightbox="image-1"><img src="img/Website-Blocker.png" alt="" style="height:150px;width:350px;"></a>
                     </td>
                 </tr>
-                <!--<tr>
-    <td>
-        <a href=""><img src="http://placehold.it/350x150" alt=""></a>
-    </td>
-    <td>
-        <a href=""><img src="http://placehold.it/350x150" alt=""></a>
-    </td>
-    <td>
-        <a href=""><img src="http://placehold.it/350x150" alt=""></a>
-    </td>
-</tr>
-<tr>
-    <td>
-        <a href=""><img src="http://placehold.it/350x150" alt=""></a>
-    </td>
-    <td>
-        <a href=""><img src="http://placehold.it/350x150" alt=""></a>
-    </td>
-    <td>
-        <a href=""><img src="http://placehold.it/350x150" alt=""></a>
-    </td>
-</tr>
-<tr>
-    <td>
-        <a href=""><img src="http://placehold.it/350x150" alt=""></a>
-    </td>
-    <td>
-        <a href=""><img src="http://placehold.it/350x150" alt=""></a>
-    </td>
-    <td>
-        <a href=""><img src="http://placehold.it/350x150" alt=""></a>
-    </td>
-</tr>-->
             </table>
         </div>
         <hr>
         <ul id="footer">
             <li>
-                <a href=""><img src="img/fb.png" alt="FaceBook"></a>
+                <a href="https://goo.gl/dvKHDK" target="_blank"><img src="img/fb.png" alt="FaceBook"></a>
             </li>
             <li>
-                <a href=""><img src="img/linkedin.png" alt="LinkedIn"></a>
+                <a href="https://goo.gl/qAL49Q" target="_blank"><img src="img/linkedin.png" alt="LinkedIn" target="_blank"></a>
             </li>
             <li>
-                <a href=""><img src="img/twitter.png" alt="Twitter"></a>
+                <a href="https://goo.gl/qSLMgA" target="_blank"><img src="img/twitter.png" alt="Twitter"></a>
             </li>
             <li>
-                <a href=""><img src="img/yt.png" alt="Youtube"></a>
+                <a href="https://goo.gl/VAGPjo" target="_blank"><img src="img/yt.png" alt="Youtube"></a>
             </li>
             <li id="copyright"><a href="http://sandeepsatone.weebly.com/" target="_blank">Site Developed and Maintained by Sandeep Balram Satone</a></li>
         </ul>
