Completed the certificate.html page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li><a href="java.html">Java</a></li>
             <li><a href="webdevelopment.html">WebDevelopment</a></li>
             <li><a href="mobile.html">MobileProjects</a></li>
-            <li><a href="youtube.html">Youtube</a></li>
+            <li><a href="certificate.html">Certificates</a></li>
         </ul>
         <hr>
         <div id="content">
